--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <p>liczba znaków: <span id="count-character"></span></p>
     <p>liczba znaków (bez spacji): <span id="count-character-no-spaces"></span></p>
     <p>szacowany czas czytania analizowanego tekstu to: <span id="read-time">0</span> sekund</p>
+    <p>liczba zdań: <span id="count-sentences"></span></p>
+    <p>najdłuższe słowo w tekście: <span id="longest-word"></span></p>
+    <p>średnią długość słowa: <span id="avg-word-length"></span></p>
+    <p>procent wielkich liter w tekście: <span id="uppercase-percent"></span>%</p>
 
     <script src="script.js"></script>
 </body>
